# fastapi-rocket-boilerplate

./: .coveragerc  .env  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  Pulumi.dev.yaml  Pulumi.yaml  README.md  SECURITY.md  __main__.py  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  sdk_client_script.py
.github/workflows/: ci.yml  style.yml
.trunk/: trunk.yaml
app/: conftest.py  main.py  settings.py
app/core/: celery.py
app/core/admin/: auth.py  models.py
app/core/auth/: functions.py
app/core/db/: engine.py  session.py
app/core/db/migrations/: alembic.ini  env.py  models.py  test_migrations.py
app/core/db/migrations/versions/: 1f9f63ce8990_.py  b130fa25b02a_init.py
app/core/middleware/: db_session_context.py  main.py  nocache.py
app/core/models/: base.py  record.py
app/core/test/: test_main.py
app/core/test/admin/: test_auth.py
app/core/test/auth/: test_functions.py
app/core/test/db/: test_engine.py  test_session.py
app/core/test/models/: test_base.py  test_record.py
app/services/admin/: config.py  models.py  views.py
app/services/admin/templates/: report.html
app/services/admin/test/: test_views.py
app/services/user/: models.py  responses.py  routes.py  schemas.py
app/services/user/test/: test_models.py  test_routes.py
generate_client/: package-lock.json  sdk_client_script.py
