[tool.poetry]
name = "fastapi-rocket-boilerplate"
version = "0.1.0"
description = "FastAPI Rocket Boilerplate to build an API based in Python with its most modern technologies!"
authors = ["adrian.sacristan <adriansacristan1993@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
psycopg2 = "^2.9.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
sqladmin = "^0.14.0"
itsdangerous = "^2.1.2"
pydantic = {version = "1.10.12", extras = ["dotenv", "email"]}
alembic = "^1.11.2"
asyncpg = "^0.28.0"
sqlmodel = "^0.0.8"
httpx = "^0.24.1"
asyncio = "^3.4.3"
celery = {extras = ["redis"], version = "^5.3.4"}
pytz = "^2023.3.post1"
pika = "^1.3.2"
pulumi = "^3.87.0"
pulumi-gcp = "^6.67.0"
pulumi-kubernetes = "^4.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.11.1"
pre-commit = "^3.4.0"
pylint = "^2.17.5"
mypy = "^1.5.1"
build = "^1.0.3"
wheel = "^0.41.2"
twine = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79


[tool.flake8]
exclude = "venv|.venv|^app/core/db/migrations/|^app/core/middleware/db_session_context.py$"
max-complexity = 10
max-line-length = 79
extend-ignore = """
    E712,
    E203,
    F403,
    E402,
    F401,
"""
per-file-ignores = """
    __init__.py: F401
"""
